2007-07-31  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/all.tcl: Typo: s/Devel/Dev/

	* nsd/driver.c:
	* nsd/progress.c:
	* tests/http.tcl: Make sure progress for duplicate URLs don't clobber
	each other. Cleanup the reset handling. Make sure SLS callbacks run only
	when a socket actually closes, not when set aside for keepalive.

	(Fixes bug #1724222)

	* tests/ns_log.test: Make tests robust to unrelated logging activity.

2007-07-22  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/all.tcl: Log a messages (Devel) as each test begins to help
	correlate other log messages to tests, when debugging.

	* tests/testserver/pages/hello.html:
	* tests/testserver/pages/hello.xhtml: Static pages to check mime-type
	header w/hackcontenttype enabled. (test encoding-7.1, currently failing).

	* tests/testserver/modules/testhttp.tcl: Handle case where content is
	returned chunked and keep-alive is enabled. i.e. connection-close can
	not be used as an end-of-message marker.

	* tests/testserver/pages/http_chunked.adp: Manipulate ADP buffer size if
	requested to force streaming with test-sized ADP pages.

	* tests/test.nscfg:
	* tests/http.test: Distinguish between writersize and uploadsize and add
	another test. (Two bugs here: long standing read-buffer misshandling
	causing endless loops, and new progress crash caused by multiple
	SockClose() from different threads (?) )

	* tests/http_keep.test: New tests for keep-alive logic for HTTP 1.0 and
	1.1 clients. (1 POST bug: is the test or the code broken?).

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/return.c:
	* nsd/connio.c: Depreciated: Ns_ConnSetRequiredHeaders(),
	Ns_ConnQueueHeaders(), Ns_ConnFlushHeaders(). Default headers and
	flushing are now handled at last moment by Ns_ConnWriteVData() which
	knows exactly how many bytes are to be sent. The Ns_ConnWrite* routines
	now take a flags argument and an NS_CONN_STREAM flag which enables
	chunking if possible.
